[gd_scene load_steps=9 format=3 uid="uid://d1pndeilagsnx"]

[ext_resource type="Script" uid="uid://fpd3m83nny70" path="res://Scenes/Menu/Chooser/character_panel.gd" id="1_gog15"]
[ext_resource type="PackedScene" uid="uid://bgroidwx25diq" path="res://Scenes/!Player/player_sprite.tscn" id="1_y8ywe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gog15"]

[sub_resource type="LabelSettings" id="LabelSettings_gog15"]

[sub_resource type="LabelSettings" id="LabelSettings_sbdk7"]
font_size = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_le3iq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_le3iq"]
bg_color = Color(0.870588, 0.631373, 0, 0.498039)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jg5pj"]

[node name="Character_Panel" type="Button"]
custom_minimum_size = Vector2(380, 78)
offset_right = 380.0
offset_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_gog15")
script = ExtResource("1_gog15")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayerPanel" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="PlayerSprite" parent="MarginContainer/HBoxContainer/PlayerPanel" instance=ExtResource("1_y8ywe")]
position = Vector2(30, 30)
scale = Vector2(3, 3)

[node name="Text" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/Text"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
label_settings = SubResource("LabelSettings_gog15")

[node name="PlayTime" type="Label" parent="MarginContainer/HBoxContainer/Text"]
layout_mode = 2
size_flags_vertical = 3
text = "00:00:00"
label_settings = SubResource("LabelSettings_sbdk7")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="FavoriteButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(29, 29)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_le3iq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_le3iq")
toggle_mode = true
text = "ü§ç"
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(29, 29)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg5pj")
text = "‚õå"

[node name="DeleteContainer" type="HBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Confirm" type="Button" parent="MarginContainer/DeleteContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Cancel")
focus_neighbor_top = NodePath("../Cancel")
focus_neighbor_right = NodePath("../Cancel")
focus_neighbor_bottom = NodePath("../Cancel")
text = "–î–∞"

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/DeleteContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[shake]—É–¥–∞–ª–∏—Ç—å –ø–µ—Ä—Å–æ–Ω–∞–∂–∞?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cancel" type="Button" parent="MarginContainer/DeleteContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Confirm")
focus_neighbor_top = NodePath("../Confirm")
focus_neighbor_right = NodePath("../Confirm")
focus_neighbor_bottom = NodePath("../Confirm")
text = "–ù–µ—Ç"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/PlayerPanel" to="." method="_on_player_panel_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/PlayerPanel" to="." method="_on_player_panel_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/FavoriteButton" to="." method="_on_favorite_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MarginContainer/DeleteContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/DeleteContainer/Cancel" to="." method="_on_cancel_pressed"]
